// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/processor.js options exportGlobals should not export :global values when exportGlobals is false 1`] = `
Object {
  "b": Array [
    "mc8df92ddf_b",
  ],
}
`;

exports[`/processor.js options lifecycle options after should run async postcss plugins 1`] = `
"/* packages/processor/test/specimens/relative.css */
.mc_wooga {
    color: red;
    background: url(\\"../specimens/folder/to.png\\");
}
a {}
"
`;

exports[`/processor.js options lifecycle options after should run sync postcss plugins 1`] = `
"/* packages/processor/test/specimens/relative.css */
.mc_wooga {
    color: red;
    background: url(\\"../specimens/folder/to.png\\");
}
a {}
"
`;

exports[`/processor.js options lifecycle options after should use postcss-url by default 1`] = `
"/* packages/processor/test/specimens/relative.css */
.mc8e3ffde3_wooga {
    color: red;
    background: url(\\"../specimens/folder/to.png\\");
}
"
`;

exports[`/processor.js options lifecycle options before should run async postcss plugins before processing 1`] = `
"/* packages/processor/test/specimens/async-before.css */
a {}"
`;

exports[`/processor.js options lifecycle options before should run sync postcss plugins before processing 1`] = `
"/* packages/processor/test/specimens/sync-before.css */
a {}"
`;

exports[`/processor.js options lifecycle options done should run async postcss plugins done processing 1`] = `
"/* packages/processor/test/specimens/async-done.css */
a {}"
`;

exports[`/processor.js options lifecycle options done should run sync postcss plugins done processing 1`] = `
"/* packages/processor/test/specimens/sync-done.css */
a {}"
`;

exports[`/processor.js options lifecycle options dupewarn should warn on potentially duplicate file paths 1`] = `
Array [
  Array [
    "POTENTIAL DUPLICATE FILES:
	packages/processor/test/specimens/start.css
	packages/processor/test/specimens/START.css",
  ],
]
`;

exports[`/processor.js options lifecycle options processing should include exports from 'modular-css-export' modules 1`] = `
Object {
  "a": true,
  "b": false,
}
`;

exports[`/processor.js options lifecycle options processing should run async postcss plugins processing processing 1`] = `
"/* packages/processor/test/specimens/async-processing.css */
a {}"
`;

exports[`/processor.js options lifecycle options processing should run sync postcss plugins processing processing 1`] = `
"/* packages/processor/test/specimens/sync-processing.css */
a {}"
`;

exports[`/processor.js options lifecycle options verbose should output debugging messages when verbose mode is enabled 1`] = `
Array [
  Array [
    "[processor]",
    "file()",
    "packages/processor/test/specimens/start.css",
  ],
  Array [
    "[processor]",
    "_add()",
    "packages/processor/test/specimens/start.css",
  ],
  Array [
    "[processor]",
    "_before()",
    "packages/processor/test/specimens/start.css",
  ],
  Array [
    "[processor]",
    "file()",
    "packages/processor/test/specimens/local.css",
  ],
  Array [
    "[processor]",
    "_add()",
    "packages/processor/test/specimens/local.css",
  ],
  Array [
    "[processor]",
    "_before()",
    "packages/processor/test/specimens/local.css",
  ],
  Array [
    "[processor]",
    "file()",
    "packages/processor/test/specimens/folder/folder.css",
  ],
  Array [
    "[processor]",
    "_add()",
    "packages/processor/test/specimens/folder/folder.css",
  ],
  Array [
    "[processor]",
    "_before()",
    "packages/processor/test/specimens/folder/folder.css",
  ],
  Array [
    "[processor]",
    "_process()",
    "packages/processor/test/specimens/folder/folder.css",
  ],
  Array [
    "[processor]",
    "_process()",
    "packages/processor/test/specimens/local.css",
  ],
  Array [
    "[processor]",
    "_process()",
    "packages/processor/test/specimens/start.css",
  ],
  Array [
    "[processor]",
    "string()",
    "packages/processor/test/specimens/string.css",
  ],
  Array [
    "[processor]",
    "_add()",
    "packages/processor/test/specimens/string.css",
  ],
  Array [
    "[processor]",
    "_before()",
    "packages/processor/test/specimens/string.css",
  ],
  Array [
    "[processor]",
    "_process()",
    "packages/processor/test/specimens/string.css",
  ],
  Array [
    "[processor]",
    "_after()",
    "packages/processor/test/specimens/string.css",
  ],
  Array [
    "[processor]",
    "_after()",
    "packages/processor/test/specimens/folder/folder.css",
  ],
  Array [
    "[processor]",
    "_after()",
    "packages/processor/test/specimens/local.css",
  ],
  Array [
    "[processor]",
    "_after()",
    "packages/processor/test/specimens/start.css",
  ],
]
`;

exports[`/processor.js options map should generate external source maps 1`] = `
"/* packages/processor/test/specimens/folder/folder.css */
.mc_folder { margin: 2px; }
/* packages/processor/test/specimens/local.css */
.mc_booga { background: green; }
/* packages/processor/test/specimens/start.css */
.mc_booga { color: red; background: blue; }
.mc_tooga { border: 1px solid white; }

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInBhY2thZ2VzL3Byb2Nlc3Nvci90ZXN0L3NwZWNpbWVucy9mb2xkZXIvZm9sZGVyLmNzcyIsInBhY2thZ2VzL3Byb2Nlc3Nvci90ZXN0L3NwZWNpbWVucy9sb2NhbC5jc3MiLCJwYWNrYWdlcy9wcm9jZXNzb3IvdGVzdC9zcGVjaW1lbnMvc3RhcnQuY3NzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUFBLHdEQUFBO0FBQ0EsYUFBVSxXQUFXLEVBQUU7QUNEdkIsZ0RBQUE7QUFJQSxZQUFTLGlCQUFpQixFQUFFO0FDSjVCLGdEQUFBO0FBRUEsWURGQSxVQUFlLEVBQ2YsZ0JBQWdCLEVDQ3NCO0FBQ3RDLFlGSEEsdUJBQW9CLEVFR2UiLCJmaWxlIjoib3V0LmNzcyIsInNvdXJjZXNDb250ZW50IjpbIkB2YWx1ZSBmb2xkZXI6IHdoaXRlO1xuLmZvbGRlciB7IG1hcmdpbjogMnB4OyB9XG4iLCJAdmFsdWUgb25lOiByZWQ7XG5AdmFsdWUgdHdvOiBibHVlO1xuQHZhbHVlIGZvbGRlciBmcm9tIFwiLi9mb2xkZXIvZm9sZGVyLmNzc1wiO1xuXG4uYm9vZ2EgeyBiYWNrZ3JvdW5kOiBncmVlbjsgfVxuLmxvb2dhIHsgY29tcG9zZXM6IGJvb2dhOyB9XG4iLCJAdmFsdWUgb25lLCB0d28sIGZvbGRlciBmcm9tIFwiLi9sb2NhbC5jc3NcIjtcbi53b29nYSB7IGNvbXBvc2VzOiBib29nYSBmcm9tIFwiLi9sb2NhbC5jc3NcIjsgfVxuLmJvb2dhIHsgY29sb3I6IG9uZTsgYmFja2dyb3VuZDogdHdvOyB9XG4udG9vZ2EgeyBib3JkZXI6IDFweCBzb2xpZCBmb2xkZXI7IH1cbiJdfQ== */"
`;

exports[`/processor.js options map should generate source maps 1`] = `
"/* packages/processor/test/specimens/folder/folder.css */
.mc_folder { margin: 2px; }
/* packages/processor/test/specimens/local.css */
.mc_booga { background: green; }
/* packages/processor/test/specimens/start.css */
.mc_booga { color: red; background: blue; }
.mc_tooga { border: 1px solid white; }

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInBhY2thZ2VzL3Byb2Nlc3Nvci90ZXN0L3NwZWNpbWVucy9mb2xkZXIvZm9sZGVyLmNzcyIsInBhY2thZ2VzL3Byb2Nlc3Nvci90ZXN0L3NwZWNpbWVucy9sb2NhbC5jc3MiLCJwYWNrYWdlcy9wcm9jZXNzb3IvdGVzdC9zcGVjaW1lbnMvc3RhcnQuY3NzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUFBLHdEQUFBO0FBQ0EsYUFBVSxXQUFXLEVBQUU7QUNEdkIsZ0RBQUE7QUFJQSxZQUFTLGlCQUFpQixFQUFFO0FDSjVCLGdEQUFBO0FBRUEsWURGQSxVQUFlLEVBQ2YsZ0JBQWdCLEVDQ3NCO0FBQ3RDLFlGSEEsdUJBQW9CLEVFR2UiLCJmaWxlIjoib3V0LmNzcyIsInNvdXJjZXNDb250ZW50IjpbIkB2YWx1ZSBmb2xkZXI6IHdoaXRlO1xuLmZvbGRlciB7IG1hcmdpbjogMnB4OyB9XG4iLCJAdmFsdWUgb25lOiByZWQ7XG5AdmFsdWUgdHdvOiBibHVlO1xuQHZhbHVlIGZvbGRlciBmcm9tIFwiLi9mb2xkZXIvZm9sZGVyLmNzc1wiO1xuXG4uYm9vZ2EgeyBiYWNrZ3JvdW5kOiBncmVlbjsgfVxuLmxvb2dhIHsgY29tcG9zZXM6IGJvb2dhOyB9XG4iLCJAdmFsdWUgb25lLCB0d28sIGZvbGRlciBmcm9tIFwiLi9sb2NhbC5jc3NcIjtcbi53b29nYSB7IGNvbXBvc2VzOiBib29nYSBmcm9tIFwiLi9sb2NhbC5jc3NcIjsgfVxuLmJvb2dhIHsgY29sb3I6IG9uZTsgYmFja2dyb3VuZDogdHdvOyB9XG4udG9vZ2EgeyBib3JkZXI6IDFweCBzb2xpZCBmb2xkZXI7IH1cbiJdfQ== */"
`;

exports[`/processor.js options namer should require a namer if a string is passed 1`] = `
Object {
  "wooga": Array [
    "AA",
  ],
}
`;

exports[`/processor.js options namer should use a custom naming function 1`] = `
Object {
  "wooga": Array [
    "packages_processor_test_specimens_simple_css_wooga",
  ],
}
`;

exports[`/processor.js options namer should use a custom naming function 2`] = `
Object {
  "wooga": Array [
    "packages_processor_test_specimens_simple_css_wooga",
  ],
}
`;

exports[`/processor.js options namer should use a custom naming function 3`] = `".packages_processor_test_specimens_simple_css_wooga { }"`;

exports[`/processor.js options namer should use the default naming function if a non-function is passed 1`] = `
Object {
  "wooga": Array [
    "mc4a20438a_wooga",
  ],
}
`;

exports[`/processor.js options postcss options should support custom parsers 1`] = `
"/* packages/processor/test/specimens/parser.css */
.mce1d18d5d_a {
    color: blue
}"
`;

exports[`/processor.js options rewrite should not rewrite url() references when falsey 1`] = `
"/* packages/processor/test/specimens/rewrite.css */
.mc20ca2799_a {
    background: url(\\"img.png\\");
}"
`;

exports[`/processor.js options rewrite should pass through to postcss-url as config 1`] = `
"/* packages/processor/test/specimens/rewrite.css */
.mc20ca2799_a {
    background: url(\\"data:image/png;base64,iVBORwoaCgAAAA1JSERSAAAACgAAAAoIAgAAAAJQWOoAAAABc1JHQgCuzhzpAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAOwwAADsMBx2+oZAAAABl0RVh0U29mdHdhcmUAcGFpbnQubmV0IDQuMC4xOdTWsmQAAAAOSURBVChTYxgFJAMGBgABNgABY8OiGAAAAABJRU5ErkJggg==\\");
}"
`;

exports[`/processor.js options rewrite should rewrite url() references by default 1`] = `
"/* packages/processor/test/specimens/rewrite.css */
.mc20ca2799_a {
    background: url(\\"../specimens/img.png\\");
}"
`;
